WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62124
Do not use NPRuntimeObjectMap in NetscapePlugin::setException when plug-in is running out of process
https://bugs.webkit.org/show_bug.cgi?id=62124
Summary
Do not use NPRuntimeObjectMap in NetscapePlugin::setException when plug-in is...
Carlos Garcia Campos
Reported
2011-06-06 06:38:05 PDT
In the GTK+ port we build the plugin process with only the minimum files required, because we need to compile it with gtk2 even when building webkit with gtk3. NPRuntimeObjectMap::setGlobalException(exceptionString); breaks the build for us when building with plugin process enabled.
Attachments
Patch
(1.53 KB, patch)
2011-06-06 06:41 PDT
,
Carlos Garcia Campos
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-06-06 06:41:48 PDT
Created
attachment 96083
[details]
Patch Use #if !ENABLE(PLUGIN_PROCESS) block as suggested by Anders, it doesn't really fix the FIXME, but it allows us to build for now.
Anders Carlsson
Comment 2
2011-06-06 07:19:05 PDT
Comment on
attachment 96083
[details]
Patch Could you change the #ifdef to read something like: #if ENABLE(PLUGIN_PROCESS) // FIXME ... #else NPRuntimeObjectmap::setGlobalException() #end
Carlos Garcia Campos
Comment 3
2011-06-06 10:07:13 PDT
Sure!
Carlos Garcia Campos
Comment 4
2011-06-06 10:10:33 PDT
Committed
r88171
: <
http://trac.webkit.org/changeset/88171
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug