2011-06-06  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Anders Carlsson.

        Do not use NPRuntimeObjectMap in NetscapePlugin::setException when plug-in is running out of process
        https://bugs.webkit.org/show_bug.cgi?id=62124

        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
        (WebKit::NetscapePlugin::setException):

Canonical link: https://commits.webkit.org/77614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88171 268f45cc-cd09-0410-ab3c-d52691b4dbfc